[project]
name = "radio-scrobbler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.4.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pylast>=7.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
beo-radio-scrobbler = "beo_radio_scrobbler.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beo_radio_scrobbler"]
